--- a/名称未設定.html
+++ b/名称未設定.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="utf-8">
-  <title>My Simple Site</title>
+  <meta charset="UTF-8" />
+  <title>ランダムマックメニュー</title>
 </head>
 <body>
-  <h1>Hello, GitHub!</h1>
-  <p>これは私の初めてのHTMLページです。</p>
+  <h1>マクドナルドメニューランダム表示</h1>
+  <button id="randomBtn">ランダムで表示</button>
+  <p id="menuResult"></p>
+
+  <script src="script.js"></script>
 </body>
 </html>
